Closed
Bug 392130
Opened 18 years ago
Closed 18 years ago
Fixing 390692 breaks building XUL disabled configuration
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: romaxa, Assigned: aaronlev)
References
Details
Attachments
(1 file)
1.06 KB,
patch
|
aaronlev
:
review+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
error: invalid use of undefined type ‘struct nsIContent’
error: invalid use of undefined type ‘struct nsIPresShell’
............
accessible/src/base/nsAccessibleEventData.cpp:91: error: invalid use of undefined type ‘struct nsIContent’
.................
Attachment #276582 -
Flags: review?(roc)
Assignee | ||
Updated•18 years ago
|
Attachment #276582 -
Flags: review?(roc)
Attachment #276582 -
Flags: review+
Attachment #276582 -
Flags: approval1.9?
Updated•18 years ago
|
Attachment #276582 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•