Bug 392130. Fix builds with XUL disabled. Patch by romaxa, r=aaronlev, a=dsicore